--- a/index.html
+++ b/index.html
@@ -7,17 +7,28 @@
 </head>
 <body>
     <header>
-        <div class="menu-box">
-            <nav>
-                <ul>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Restaurants</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Job</a></li>
-                </ul>
-
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="#">
+                    <div class="dropdown">Menu<i class="fas fa-angle-down">  </i>
+                        <div class="dropdown-content">
+                            <a href="xx">X1</a>
+                            <a href="xx">X1</a>
+                            <a href="xx">X1</a>
+                            <a href="xx">X1</a>
+                            <a href="xx">X1</a>
+                        </div>
+                    </div>
+                </a>
+                </li>
+                <li><a href="#">Restaurants</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Job</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <script src="https://kit.fontawesome.com/32324d0af4.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
