--- a/index.html
+++ b/index.html
@@ -2,33 +2,103 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>FoodDelivery</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/main/style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">
-                    <div class="dropdown">Menu<i class="fas fa-angle-down">  </i>
+                <li>
+                    <div class="dropdown"><a href="#">Menu<i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-content">
-                            <a href="xx">X1</a>
-                            <a href="xx">X1</a>
-                            <a href="xx">X1</a>
-                            <a href="xx">X1</a>
-                            <a href="xx">X1</a>
+                            <a href="pizza.html">Pizza</a>
+                            <a href="hamburgers.html">Hamburgers</a>
+                            <a href="xx">Sushi</a>
+                            <a href="xx">Salads</a>
+                            <a href="xx">Desserts</a>
+                            <a href="xx">Soup</a>
+                            <a href="xx">Drinks</a>
+                            <a href="xx">Hot</a>
                         </div>
                     </div>
-                </a>
                 </li>
                 <li><a href="#">Restaurants</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Job</a></li>
+                <li>
+                    <div class="dropdown">Services<i class="fas fa-angle-down"></i>
+                        <div class="dropdown-content">
+                            <a href="">Corporative Party</a>
+                            <a href="">Birthdays</a>
+                            <a href="xx">ClientCard</a>
+                            <a href="xx">Fourchete</a>
+                            <a href="xx">Decorations</a>
+                        </div>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
 
+    <section id="slideShow">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100 " src="assets/img/pizza.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <div id="wrapper">
+                            <a href="#" class="btn-menu">
+                                <div class="dots-container">
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                </div>
+                                <span><h1>Menu!</h1></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 " src="assets/img/hamburger.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 " src="assets/img/sushi.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 " src="assets/img/fish.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 " src="assets/img/potat.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 " src="assets/img/steak.jpg" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/32324d0af4.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 </html>
