--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#">News</a></li>
                 <li><a href="#">Job</a></li>
                 <li>
-                    <div class="dropdown">Services<i class="fas fa-angle-down"></i>
+                    <div class="dropdown"><a href="#">Services<i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-content">
                             <a href="">Corporative Party</a>
                             <a href="">Birthdays</a>
@@ -55,9 +55,10 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100 " src="assets/img/pizza.jpg" alt="First slide">
+                    <img class="d-block w-100 " src="assets/img/pizza.jpg" alt="Could not Load!">
                     <div class="carousel-caption d-none d-md-block">
-                        <div id="wrapper">
+                        <h2>We offer a large gamma of food.</h2>
+                        <div class="wrapper">
                             <a href="#" class="btn-menu">
                                 <div class="dots-container">
                                     <div class="dot"></div>
@@ -65,25 +66,95 @@
                                     <div class="dot"></div>
                                     <div class="dot"></div>
                                 </div>
-                                <span><h1>Menu!</h1></span>
+                                <span>Menu</span>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 " src="assets/img/hamburger.jpg" alt="Second slide">
+                    <img class="d-block w-100 " src="assets/img/hamburger.jpg" alt="Could not Load!">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>For us the customer is always important.</h2>
+                        <div class="wrapper">
+                            <a class="btn-menu">
+                                <div class="dots-container">
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                </div>
+                                <span>Quality</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 " src="assets/img/sushi.jpg" alt="Third slide">
+                    <img class="d-block w-100 " src="assets/img/sushi.jpg" alt="Could not Load!">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>We also help with Birthday Party!</h2>
+                        <div class="wrapper">
+                            <a class="btn-menu">
+                                <div class="dots-container">
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                </div>
+                                <span>Speed</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 " src="assets/img/fish.jpg" alt="Third slide">
+                    <img class="d-block w-100 " src="assets/img/fish.jpg" alt="Could not Load">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>We have the fastest delivery in the town!</h2>
+                        <div class="wrapper">
+                            <a class="btn-menu">
+                                <div class="dots-container">
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                </div>
+                                <span>Choice</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 " src="assets/img/potat.jpg" alt="Third slide">
+                    <img class="d-block w-100 " src="assets/img/potat.jpg" alt="Could not Load!">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>We are 16 years on market!</h2>
+                        <div class="wrapper">
+                            <a class="btn-menu">
+                                <div class="dots-container">
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                </div>
+                                <span>Cheap</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 " src="assets/img/steak.jpg" alt="Third slide">
+                    <img class="d-block w-100 " src="assets/img/steak.jpg" alt="Could not Load!">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>We love to do food for you!</h2>
+                        <div class="wrapper">
+                            <a class="btn-menu">
+                                <div class="dots-container">
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                    <div class="dot"></div>
+                                </div>
+                                <span>Best</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
