--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 </head>
 <body>
     <header>
+        <div class="content">
+            <div class="content-container">
+                <p class="content-container-text">
+                   We are
+                </p>
+
+                <ul class="content-container-list">
+                    <li>the best!</li>
+                    <li>the fastest!</li>
+                    <li>the cheapest!</li>
+                    <li class="content-container-list-item">your dream!</li>
+                </ul>
+            </div>
+        </div>
         <nav>
+
             <ul>
                 <li>
                     <div class="dropdown"><a href="#">Menu<i class="fas fa-angle-down"></i></a>
