--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </nav>
     </header>
 
-    <section id="slideShow">
+    <main id="slideShow">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -181,7 +181,24 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-    </section>
+    </main>
+
+    <article>
+        <ul class="parent">
+            <li onclick="window.location='http://google.com';">
+                <div class="pizza-container">
+                    <h4><mark>NEW</mark> Italian pizza!</h4>
+                </div>
+            </li>
+
+            <li onclick="window.location='http://google.com';">
+                <div class="pizza-container">
+                    <h4><mark>NEW</mark>Restaurant open in BALTI</h4>
+                </div>
+            </li>
+
+        </ul>
+    </article>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/32324d0af4.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
