--- a/index.html
+++ b/index.html
@@ -9,22 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="content">
-            <div class="content-container">
-                <p class="content-container-text">
-                   We are
-                </p>
-
-                <ul class="content-container-list">
-                    <li>the best!</li>
-                    <li>the fastest!</li>
-                    <li>the cheapest!</li>
-                    <li class="content-container-list-item">your dream!</li>
-                </ul>
-            </div>
-        </div>
         <nav>
-
             <ul>
                 <li>
                     <div class="dropdown"><a href="#">Menu<i class="fas fa-angle-down"></i></a>
@@ -46,8 +31,8 @@
                 <li>
                     <div class="dropdown"><a href="#">Services<i class="fas fa-angle-down"></i></a>
                         <div class="dropdown-content">
-                            <a href="">Corporative Party</a>
-                            <a href="">Birthdays</a>
+                            <a href="xx">Corporative Party</a>
+                            <a href="xx">Birthdays</a>
                             <a href="xx">ClientCard</a>
                             <a href="xx">Fourchete</a>
                             <a href="xx">Decorations</a>
@@ -182,8 +167,7 @@
             </a>
         </div>
     </main>
-
-    <article>
+    <article id="adsPanel">
         <ul class="parent">
             <li onclick="window.location='http://google.com';">
                 <div class="pizza-container">
@@ -192,16 +176,77 @@
             </li>
 
             <li onclick="window.location='http://google.com';">
-                <div class="pizza-container">
+                <div class="pizza-container-2">
                     <h4><mark>NEW</mark>Restaurant open in BALTI</h4>
                 </div>
             </li>
-
         </ul>
     </article>
+
+    <section id="news-panel">
+        <ul class="news-list">
+            <li>
+                <div class="news-list-content">
+                    <img src="assets/img/news-img/restaurant.jpg" alt="x"/>
+                    <h2>We are hosting many types of restaurants from bussiness to <mark>premium</mark></h2>
+                </div>
+            </li>
+            <li>
+                <div class="news-list-content">
+                    <img src="assets/img/news-img/essence.jpg" alt="x">
+                    <h2>We are a large company having <mark>world-wide</mark> restaurants</h2>
+                </div>
+            </li>
+            <li>
+                <div class="news-list-content">
+                    <img src="assets/img/news-img/red.jpg" alt="x">
+                    <h2>From coffee restaurants to highest class one</h2>
+                </div>
+            </li>
+            <li>
+                <div class="news-list-content">
+                    <img src="assets/img/news-img/strip.png" alt="x">
+                    <h2>We also have strip clubs for our <mark>VIP clients</mark></h2>
+                </div>
+            </li>
+            <li>
+                <div class="news-list-content">
+                    <img src="assets/img/news-img/re4.jpg" alt="x">
+                    <h2>We have <mark>air-open</mark> restaurants with a beautiful view.</h2>
+                </div>
+            </li>
+            <li>
+            <div class="news-list-content">
+                <img src="assets/img/news-img/sea.jpg" alt="x">
+                <h2>We also have <mark>uderwater</mark>restaurants!</h2>
+            </div>
+            </li>
+        </ul>
+    </section>
+
+    <footer>
+        <ul class="footer-content">
+            <li>
+                 <h2>Company</h2>
+                    <a href="X"> <h5>Personal</h5></a>
+                    <a href="X"> <h5>Contact</h5></a>
+                    <a href="X"><h5>All restaurants</h5></a>
+            </li>
+            <li>
+                <h2>Services</h2>
+                <a href="X"><h5>Join our team</h5></a>
+                <a href="X"><h5>World-Wide Delivery</h5></a>
+                <a href="X"><h5>Need degustators</h5></a>
+                <a href="X"><h5>Client-Card</h5></a>
+            </li>
+            <li>
+                <h2>Contacte</h2>
+            </li>
+        </ul>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/32324d0af4.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </body>
 </html>
