--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>FoodDelivery</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/main/media.css">
     <link rel="stylesheet" href="assets/main/style.css">
 </head>
 <body>
@@ -167,17 +168,16 @@
             </a>
         </div>
     </main>
+
     <article id="adsPanel">
         <ul class="parent">
             <li onclick="window.location='http://google.com';">
                 <div class="pizza-container">
-                    <h4><mark>NEW</mark> Italian pizza!</h4>
                 </div>
             </li>
 
             <li onclick="window.location='http://google.com';">
                 <div class="pizza-container-2">
-                    <h4><mark>NEW</mark>Restaurant open in BALTI</h4>
                 </div>
             </li>
         </ul>
@@ -188,37 +188,37 @@
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/restaurant.jpg" alt="x"/>
-                    <h2>We are hosting many types of restaurants from bussiness to <mark>premium</mark></h2>
+                    <h2>Bussiness to<mark>premium</mark></h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/essence.jpg" alt="x">
-                    <h2>We are a large company having <mark>world-wide</mark> restaurants</h2>
+                    <h2><mark>World-wide</mark>restaurants</h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/red.jpg" alt="x">
-                    <h2>From coffee restaurants to highest class one</h2>
+                    <h2>Coffee/High-end</h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/strip.png" alt="x">
-                    <h2>We also have strip clubs for our <mark>VIP clients</mark></h2>
+                    <h2>Strip clubs for our<mark>VIP clients</mark></h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/re4.jpg" alt="x">
-                    <h2>We have <mark>air-open</mark> restaurants with a beautiful view.</h2>
+                    <h2><mark>Air-open</mark> with a beautiful view.</h2>
                 </div>
             </li>
             <li>
             <div class="news-list-content">
                 <img src="assets/img/news-img/sea.jpg" alt="x">
-                <h2>We also have <mark>uderwater</mark>restaurants!</h2>
+                <h2><mark>Underwater</mark>restaurants!</h2>
             </div>
             </li>
         </ul>
@@ -240,7 +240,16 @@
                 <a href="X"><h5>Client-Card</h5></a>
             </li>
             <li>
-                <h2>Contacte</h2>
+                <h2>Contact</h2>
+                <a href="">
+                    <i class="fab fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-twitter-square fa-3x"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-instagram fa-3x"></i>
+                </a>
             </li>
         </ul>
     </footer>
