--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
     <article id="adsPanel">
         <ul class="parent">
             <li onclick="window.location='http://google.com';">
-                <div class="pizza-container">
-                </div>
+                <h2><mark>Our pizza menu!</mark></h2>
+                <div class="pizza-container"></div>
             </li>
 
             <li onclick="window.location='http://google.com';">
-                <div class="pizza-container-2">
-                </div>
+                <h2><mark>Our sushi menu!</mark></h2>
+                <div class="pizza-container-2"></div>
             </li>
         </ul>
     </article>
@@ -188,37 +188,37 @@
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/restaurant.jpg" alt="x"/>
-                    <h2>Bussiness to<mark>premium</mark></h2>
+                    <h2>From bussiness to<mark>premium restaurants!</mark></h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/essence.jpg" alt="x">
-                    <h2><mark>World-wide</mark>restaurants</h2>
+                    <h2><mark>World-wide</mark>restaurants in your city!</h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/red.jpg" alt="x">
-                    <h2>Coffee/High-end</h2>
+                    <h2><mark>Coffee</mark> & <mark>High-End</mark>restaurants!</h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/strip.png" alt="x">
-                    <h2>Strip clubs for our<mark>VIP clients</mark></h2>
+                    <h2>We also have <mark>Strip clubs</mark> for our<mark>VIP clients!</mark></h2>
                 </div>
             </li>
             <li>
                 <div class="news-list-content">
                     <img src="assets/img/news-img/re4.jpg" alt="x">
-                    <h2><mark>Air-open</mark> with a beautiful view.</h2>
+                    <h2><mark>Air-open</mark> with a beautiful view in the most beautiful countries.</h2>
                 </div>
             </li>
             <li>
             <div class="news-list-content">
                 <img src="assets/img/news-img/sea.jpg" alt="x">
-                <h2><mark>Underwater</mark>restaurants!</h2>
+                <h2><mark>Underwater</mark> restaurants in <mark>Dubai</mark> & <mark>Switzerland</mark>!</h2>
             </div>
             </li>
         </ul>
