--- a/index.html
+++ b/index.html
@@ -241,13 +241,13 @@
             </li>
             <li>
                 <h2>Contact</h2>
-                <a href="">
+                <a href="https://www.facebook.com/zuck" target="_blank">
                     <i class="fab fa-facebook-square fa-3x"></i>
                 </a>
-                <a href="">
+                <a href="https://twitter.com/elonmusk" target="_blank">
                     <i class="fab fa-twitter-square fa-3x"></i>
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/angelinajolieofficial/" target="_blank">
                     <i class="fab fa-instagram fa-3x"></i>
                 </a>
             </li>
