--- a/pizza.html
+++ b/pizza.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Pizza-Menu</title>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="assets/main/media.css">
     <link rel="stylesheet" href="assets/main/style.css">
 </head>
@@ -55,12 +56,12 @@
    <section id="pizza-item">
         <ul class="pizza-list-parent">
             <li>
-                <img src="assets/img/pizza/barb.jpg">
+                <img src="assets/img/pizza/barb.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">Barbeque</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
-                <div class="item-price">
+                <div class="item-price" data-value="90">
                     <div class="item-text">90 lei</div>
                     <div class="item-ico">
                         <i class="fas fa-cart-arrow-down"></i>
@@ -68,102 +69,102 @@
                 </div>
             </li>
             <li>
-                <img src="assets/img/pizza/ch.jpg">
+                <img src="assets/img/pizza/ch.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">4Cheeses</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
-                <div class="item-price">
+                <div class="item-price" data-value="80">
                     <div class="item-text">80 lei</div>
                     <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
-                <img src="assets/img/pizza/cap.jpg">
+                <img src="assets/img/pizza/cap.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">Capricioasa</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price">
                     <div class="item-text">70 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
-                <img src="assets/img/pizza/diablo.jpg">
+                <img src="assets/img/pizza/diablo.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">Diablo</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price">
                     <div class="item-text">75 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
-                <img src="assets/img/pizza/fun.jpg">
+                <img src="assets/img/pizza/fun.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">Funghi</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price">
                     <div class="item-text">65 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
-                <img src="assets/img/pizza/mar.jpg">
+                <img src="assets/img/pizza/mar.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">Margheritta</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price">
                     <div class="item-text">90 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
-                <img src="assets/img/pizza/mario.jpg">
+                <img src="assets/img/pizza/mario.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">Mario</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price">
                     <div class="item-text">65 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
-                <img src="assets/img/pizza/nap.jpg">
+                <img src="assets/img/pizza/nap.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">Napolitana</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price">
                     <div class="item-text">95 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
-                <img src="assets/img/pizza/ran.jpg">
+                <img src="assets/img/pizza/ran.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">Rancho</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price">
                     <div class="item-text">79 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
-                <img src="assets/img/pizza/pep.jpg">
+                <img src="assets/img/pizza/pep.jpg" alt="Could not load!">
                 <div class="pizza-item">
                     <div class="pizza-item-text">Pepperoni</div>
-                    <div class="pizza-item-ico"><i class="fas fa-info-circle fa-2x"></i></div>
+                    <div class="pizza-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price">
                     <div class="item-text">99 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
         </ul>
@@ -174,8 +175,8 @@
     <ul class="footer-content">
         <li>
             <h2>Company</h2>
-            <a href="X"> <h5>Personal</h5></a>
-            <a href="X"> <h5>Contact</h5></a>
+            <a href="X"><h5>Personal</h5></a>
+            <a href="X"><h5>Contact</h5></a>
             <a href="X"><h5>All restaurants</h5></a>
         </li>
         <li>
@@ -201,6 +202,9 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="https://kit.fontawesome.com/32324d0af4.js" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
