--- a/pizza.html
+++ b/pizza.html
@@ -22,7 +22,7 @@
                 <div class="dropdown"><a href="#">Menu<i class="fas fa-angle-down"></i></a>
                     <div class="dropdown-content">
                         <a href="pizza.html">Pizza</a>
-                        <a href="hamburgers.html">Hamburgers</a>
+                        <a href="hamb.html">Hamburgers</a>
                         <a href="xx">Sushi</a>
                         <a href="xx">Salads</a>
                         <a href="xx">Desserts</a>
