--- a/hamb.html
+++ b/hamb.html
@@ -12,7 +12,8 @@
 <body>
 
 <header>
-    The most <mark>delicious hamburgers ever!</mark>
+    The most
+    <mark>delicious hamburgers ever!</mark>
     <nav>
         <ul>
             <li>
@@ -23,8 +24,8 @@
                     <div class="dropdown-content">
                         <a href="pizza.html">Pizza</a>
                         <a href="hamb.html">Hamburgers</a>
-                        <a href="xx">Sushi</a>
-                        <a href="xx">Salads</a>
+                        <a href="sushi.html">Sushi</a>
+                        <a href="salad.html">Salads</a>
                         <a href="xx">Desserts</a>
                         <a href="xx">Soup</a>
                         <a href="xx">Drinks</a>
@@ -50,159 +51,181 @@
     </nav>
 </header>
 
-<section id="hamb-list">
-    <h2>Hamburgers</h2>
-    <hr>
     <section id="hamb-item">
-        <ul class="hamb-list-parent">
+        <h2>Hamburgers</h2>
+        <hr>
+        <ul class="sushi-list-parent">
             <li>
                 <img src="assets/img/burgers/4ch.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">4Cheeses</div>
-                    <div class="hamb-item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">4Cheeses</div>
+                    <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
+                    </div>
                 </div>
                 <div class="item-price" data-value="90">
-                    <div class="hamb-item-text">50 lei</div>
-                    <div class="hamb-item-ico">
+                    <div class="item-text">50 lei</div>
+                    <div class="item-ico">
                         <i class="fas fa-cart-arrow-down"></i>
                     </div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/avocado.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Avocado</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Avocado</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">50 lei</div>
-                    <div class="hamb-item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">50 lei</div>
+                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/beef.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Beef</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Beef</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">60 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">60 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/blue.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Blue</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Blue</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">75 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">75 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/Cheese.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Cheese</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Cheese</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">65 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">65 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/Crispy.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Crispy</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Crispy</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">55 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">55 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/DoubleCheese.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">DoubleCheese</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">DoubleCheese</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">65 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">65 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/Eggbacon.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Eggbacon</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Eggbacon</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">55 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">55 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/Fish.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Fish</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Fish</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">75 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">75 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/Green.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Green</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Green</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">55 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">55 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/Mario.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Mario</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Mario</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">55 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">55 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/Mister.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">Mister</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">Mister</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">65 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">65 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
             <li>
                 <img src="assets/img/burgers/Americandog.jpg" alt="Could not load!">
-                <div class="hamb-item">
-                    <div class="hamb-item-text">AmericanDog</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-info-circle fa-2x"></i></div>
+                <div class="content-item">
+                    <div class="item-text">AmericanDog</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
-                    <div class="hamb-item-text">30 lei</div>
-                    <div class="hamb-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i class="fas fa-cart-arrow-down"></i></div>
+                    <div class="item-text">30 lei</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                            class="fas fa-cart-arrow-down"></i></div>
                 </div>
             </li>
         </ul>
     </section>
-</section>
 
 <footer>
     <ul class="footer-content">
