--- a/salad.html
+++ b/salad.html
@@ -84,8 +84,8 @@
             <li>
                 <img src="assets/img/salad/greek.jpg" alt="Could not load!">
                 <div class="content-item">
-                    <div class="salad-item-text">Greek</div>
-                    <div class="salad-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                    <div class="item-text">Greek</div>
+                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                             class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
@@ -97,8 +97,8 @@
             <li>
                 <img src="assets/img/salad/hunt.jpg" alt="Could not load!">
                 <div class="content-item">
-                    <div class="salad-item-text">Hunter</div>
-                    <div class="salad-item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                    <div class="item-text">Hunter</div>
+                    <div class="sitem-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                             class="fas fa-info-circle fa-2x"></i></div>
                 </div>
                 <div class="item-price" data-value="80">
